<resources>
    <string name="app_name">Lab3UI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_username">Username</string>
    <string name="button_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="menu_register">Register</string>
    <string name="menu_qustions">Questions</string>
    <string name="menu_questions">Questions</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_email">Email</string>
    <string name="button_register">Register</string>
    <string name="username_text">username: %1$s</string>
    <string name="first_name_text">first name: %1$s</string>
    <string name="last_name_text">last name: %1$s</string>
    <string name="email_text">email: %1$s</string>
    <string name="menu_account">Account</string>
    <string name="create_by_string">Created by: %1$s</string>
    <string name="published_at_text">Published at: %1$s</string>
    <string name="add_new_question_button_text">Add new question</string>
    <string name="question_edit_text_hint">Question text</string>
    <string name="answer_edit_text_hint">Answer text</string>
    <string name="add_answer_button_text">Add answer</string>
    <string name="add_question_button_text">Add question</string>
    <string name="answer_text_template">%1$d. %2$s</string>
    <string name="polling_answer_text">%1$d | %2$s</string>
    <string name="vote_button_text">Vote</string>
    <string name="logout_button_text">Logout</string>
    <string name="delete_question_button_text">Delete question</string>
</resources>